--- a/B-app/src/app/components/home/home.component.html
+++ b/B-app/src/app/components/home/home.component.html
@@ -1,2 +1,225 @@
-  <p>home works!</p>
+ <div  class="container">
+      <!-- <div class="first">
+        <div class="one">
+            <h1 clas="first_text">BUSINESS
+                SERVICEHUB</h1>
+              </div> 
+              
+              
+              <div>
+                <button class="firstbutt btn ">log in </button>
+              </div>
+    </div> -->
+    <div class="second">
+        <div class="imageupper">
 
+        </div>
+        <div class="title">
+            <h1>Find the best business solutions 
+            </h1>
+        </div>
+        <div class="third">
+
+            <div class="firstinput">
+                <input  class="searchinput" type="text" placeholder="Company adress">
+                <label  class="searchlabel  " for="">Search</label>
+            </div>
+            <div class="lowerimage">
+                
+            </div>
+           
+        </div>
+    </div>
+
+      <div class="accor1">
+        <div class="accordion accordion-flush main-color" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Our services explained
+              </button>
+            </h2>
+  
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <div class="acc-item step1">
+                  <img [src]="images[0]" alt="">
+                  <div class="item-text">
+                    <h3 class="item-h3">Step 1</h3>
+                  <p>Enter your business details.
+                    Provide your address or enable .
+                    location for accurate services.</p>
+                  </div>
+                </div>
+                <div class="acc-item mid">
+                  <img [src]="images[1]" alt="">
+                  <div class="item-text">
+                  <h3 class="item-h3">Step 2</h3>
+                  <p>Choose a service and a
+                    discount. You're closer to
+                    optimizing your business.</p>
+                  </div>
+                </div>
+                <div class="acc-item">
+                  <img [src]="images[2]" alt="">
+                  <div class="item-text">
+                  <h3 class="item-h3">Step 3</h3>
+                  <p>Complete your payment. Sit
+                    back and relax while we
+                    enhance your business!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="home-service">
+      <div class="container">
+        <div class="home-service-item">
+          <img [src]="images[3]" alt="">
+          <div class="home-service-item-text">
+            <h2 class="main-text">Your business is in safe hands</h2>
+            <p class="secondary-text">We prioritize your business security, employing top-notch encryption methods to safeguard your data. Trust us for secure data storage and protection.</p>
+            <button class="try-now">Try Now</button>
+          </div>
+          
+          
+        </div>
+        <div  class="home-service-item item2">
+          <div id="serv-text2" class="home-service-item-text item2-text">
+            <h2 class="main-text">Smart cost-cutting solutions</h2>
+            <p class="secondary-text">Empower your business with cost-saving strategies and efficient operations. Let our tool analyze and optimize your workflows for maximum savings.</p>
+            <button class="try-now">Try Now</button>
+          </div>
+          <img id="serv-img2" [src]="images[4]" alt="">
+          
+        </div>
+      </div>
+      <footer>
+        <!-- Footer -->
+<footer class="text-center text-lg-start bg-body-tertiary text-muted">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Company name
+          </h6>
+          <p>
+            Here you can use rows and columns to organize your footer content. Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Products
+          </h6>
+          <p>
+            <a class="text-reset">Angular</a>
+          </p>
+          <p>
+            <a class="text-reset">React</a>
+          </p>
+          <p>
+            <a class="text-reset">Vue</a>
+          </p>
+          <p>
+            <a class="text-reset">Laravel</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Useful links
+          </h6>
+          <p>
+            <a  class="text-reset">Pricing</a>
+          </p>
+          <p>
+            <a class="text-reset">Settings</a>
+          </p>
+          <p>
+            <a  class="text-reset">Orders</a>
+          </p>
+          <p>
+            <a  class="text-reset">Help</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+      </footer>
+    </section>
+    <!-- <script [src]="assets/vendors/js/bootstrap.bundle.min.js"></script> -->
