--- a/B-app/src/app/components/services/services.component.html
+++ b/B-app/src/app/components/services/services.component.html
@@ -1,1 +1,2 @@
 <p>services works!</p>
+<button class="btn bg-main  " routerLink="/serviceDetails"> hi ana button el 3amltne <b>NADEEN</b> el 3ebkaraia b-show details el service </button>
