--- a/B-app/src/assets/css/cart.css
+++ b/B-app/src/assets/css/cart.css
@@ -2,10 +2,8 @@
 .main{
     top: 232px;
     left: 96px;
-    /* width: 824px; */
-    width: 60%;
+    width: 824px;
     height: 684px;
-   
     background-color: #ffffff;
     border-radius: 24px;
     box-shadow: 0px 2px 10px rgba(3,3,3,0.1);
@@ -24,7 +22,7 @@
   width: 80px;
   height: 80px;
   border-radius: 24px;
-  /* background-image: url(../images/Home/Image\ \(61\).png); */
+  background-image: url(../images/Home/Image\ \(61\).png);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -69,8 +67,7 @@
 .recit{
     top: 232px;
   left: 936px;
-  width: 40%;
-  /* width: 100px; */
+  width: 408px;
   height: 684px;
   background-color: #cb9afd;
   border-radius: 24px;
