--- a/B-app/src/app/components/navbar-auth/navbar-auth.component.html
+++ b/B-app/src/app/components/navbar-auth/navbar-auth.component.html
@@ -26,7 +26,8 @@
         <!-- <a class="navbar-brand" >
             <img src="./assets/images/freshcart-logo.svg">
         </a> -->
-        <h4 class="esm "> Esm el mashro3 el gamed</h4>
+        <!-- <h4 class="esm "> Esm el mashro3 el gamed</h4> -->
+        <h3 class="esm-gded">Business Consulting Hub </h3>
         <button
             class="navbar-toggler d-lg-none"
             type="button"
