--- a/B-app/src/app/components/login/login.component.css
+++ b/B-app/src/app/components/login/login.component.css
@@ -10,3 +10,12 @@
     width: 500px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+.btn{
+    background-color: #DCAEFD;
+    border-radius:20px ;
+    width: 200px;
+    height: 44px;
+    margin-left: 140px;
+    color: white;
+    cursor: pointer;
+}
