--- a/B-app/src/app/components/login/login.component.html
+++ b/B-app/src/app/components/login/login.component.html
@@ -12,7 +12,11 @@
         <input type="password" class="d-flex b mt-3 form-control " id="password" formControlName="password" placeholder="Enter Your Password">
         <div *ngIf="loginForm.get('password')?.errors && (loginForm.get('password')?.touched) || (loginForm.get('password')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
         <p *ngIf="loginForm.get('password')?.getError('required')"> Password is Required</p>
-        <p *ngIf="loginForm.get('password')?.getError('pattern')">It must be atleast 6 chars </p>
+        <!-- <p *ngIf="loginForm.get('password')?.getError('pattern')">It must be atleast 6 chars </p> -->
         </div>
+
+        <button  [disabled]="loginForm.invalid"class="btn mt-4 d-flex justify-content-center align-items-center ">Login 
+            <i *ngIf="isLoading" class="fa fa-spin fa-spinner"></i>
+        </button>
         </form>
     </div>
