--- a/B-app/src/app/components/notfound/notfound.component.html
+++ b/B-app/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,6 @@
-<p>notfound works!</p>
+<div class="d-flex justify-content-center mt-4">
+    <button class="btn" [routerLink]="['/home']" ><a>Wanna go back to Home Page ?</a></button>
+</div>
+<img class="mt-3 p-4 d-flex justify-content-center align-items-center align-content-center v " 
+src="../../../assets/images/errorImage.avif">
+
