--- a/B-app/src/app/components/service-details/service-details.component.html
+++ b/B-app/src/app/components/service-details/service-details.component.html
@@ -1,151 +1,53 @@
+<!-- <div class="row g-3 position-relative">
+    <div class="col-md-3" *ngFor="let provider of providers">
+        <div [routerLink]="['/providerDetails/',provider.id]">
+            <div class="product p-2 ">
+                {{provider.name}}
+                 {{provider.email}}
+                 <img class="w-100" [src]="provider.imageUrl">
+             </div>
+        </div>
+</div>
+    </div> -->
 
 <div class="container">
-    <section id="web-service" class="service">
-       
-            <div class="service-slider">
-                <h1>one</h1>
-            <div class="service-item">
-                <div class="service-item-content">
-                <h2 class="service-item-title">Service Title</h2>
-                <p class="service-item-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button class="service-item-btn">View Details</button></div>
-            </div> <!-- item -->
-            <div class="service-item">
-                <div class="service-item-content"><h2 class="service-item-title">Service Title</h2>
-                <p class="service-item-p">Description of the service</p>
-                <button class="service-item-btn">View Details</button></div>
-            </div> <!-- item -->
-            <div class="service-item">
-                <div class="service-item-content"><h2 class="service-item-title">Service Title</h2>
-                <p class="service-item-p">Description of the service</p>
-                <button class="service-item-btn">View Details</button></div>
-            </div> <!-- item -->
-            <div class="service-item">
-                <div class="service-item-content">
-                <h2 class="service-item-title">Service Title</h2>
-                <p class="service-item-p">Description of the service</p>
-                <button class="service-item-btn">View Details</button></div>
-            </div> <!-- item -->
-            <div class="service-item">
-                <div class="service-item-content"><h2 class="service-item-title">Service Title</h2>
-                <p class="service-item-p">Description of the service</p>
-                <button class="service-item-btn">View Details</button></div>
-            </div> <!-- item -->
+  <section id="web-service" class="service">
+    <div class="service-slider">
+      <div class="service-item" *ngFor="let one of all">
+        <div [routerLink]="['/serviceDetails/', one.id]">
+          <div class="service-item-content">
+            <h2 class="service-item-title mt-3" routerLinkActive="text-main fw-bold">{{ one.name }}</h2>
+            <!-- <p class="service-item-p">{{one.description}}</p> -->
+            <button class="service-item-btn mt-4 ">View Details</button>
+          </div>
         </div>
-    
-    </section>
-    <div class="one">
-        <h1 class="servic-title">Service Providers</h1>
-        <h6 class="servic-num"> 9 providers </h6>
-
-    </div>
-    <div class="two">
-        <div class="div-service-img">
-            <!-- <img  class="service-img" src="New folder/assets/images/Home/Image.png" alt=""> -->
-        </div>
-        <div class="service-name">
-            <h2 class="Service-Provider-Name"> Service Provider Name</h2>
-            <h6 class=" Service-Provider-Role"> Service Provider Role</h6>
-        </div>
-
-              
-   <div class="service-location">
-      
-            <h6 class=" Service-Provider-location"> Location: City, Country</h6>
-        </div>
-        <div class="service-button">
-      
-           <button class="Service-Provider-button">
-            Explore Services
-           </button>
-        </div>
-
-          
-    </div>
-
-
-    <div class="two">
-        <div class="div-service-img">
-            <!-- <img  class="service-img" src="New folder/assets/images/Home/Image.png" alt=""> -->
-        </div>
-        <div class="service-name">
-            <h5 class="Service-Provider-Name"> Service Provider Name</h5>
-            <h6 class=" Service-Provider-Role"> Service Provider Role</h6>
-        </div>
-
-              
-   <div class="service-location">
-      
-            <h6 class=" Service-Provider-location"> Location: City, Country</h6>
-        </div>
-        <div class="service-button">
-      
-           <button class="Service-Provider-button">
-            Explore Services
-           </button>
-        </div>
-
-          
-    </div>
-
-
-
-    <div class="two">
-        <div class="div-service-img">
-            <!-- <img  class="service-img" src="New folder/assets/images/Home/Image.png" alt=""> -->
-        </div>
-        <div class="service-name">
-            <h5 class="Service-Provider-Name"> Service Provider Name</h5>
-            <h6 class=" Service-Provider-Role"> Service Provider Role</h6>
-        </div>
-
-              
-   <div class="service-location">
-      
-            <h6 class=" Service-Provider-location"> Location: City, Country</h6>
-        </div>
-        <div class="service-button">
-      
-           <button class="Service-Provider-button">
-            Explore Services
-           </button>
-        </div>
-
-          
-    </div>
-
-</div>
-<div id="carouselExampleFade" class="carousel slide carousel-fade d-block w-500">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-   <h1>one</h1>
-        <!-- <div class="service-item d-block w-100">
-            <div class="service-item-content">
-            <h2 class="service-item-title">Service Title</h2>
-            <p class="service-item-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <button class="service-item-btn">View Details</button></div>
-        </div>  -->
-      </div>
-      <div class="carousel-item">
- 
-        <h1>two</h1>
-        <!-- <div class="service-item">
-            <div class="service-item-content">
-            <h2 class="service-item-title">Service Title</h2>
-            <p class="service-item-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <button class="service-item-btn">View Details</button></div>
-        </div>  -->
-      </div>
-      <div class="carousel-item">
-        <h1>three</h1>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="">Next</span>
-    </button>
+  </section>
+  <div class="one">
+    <h1 class="servic-title">Service Providers</h1>
+    <!-- <h6 class="servic-num"> 9 providers </h6> -->
   </div>
+
+  <div *ngFor="let provider of providers">
+    <div class="two">
+      <div class="div-service-img">
+        <img [src]="provider.imageUrl" />
+      </div>
+      <div class="service-name">
+        <h2 class="Service-Provider-Name">{{ provider.name | trim }}
+            <span *ngIf="provider.name.split(' ').length >2">...</span>
+        </h2>
+        <h6 class="Service-Provider-Role">Service Provider Role</h6>
+      </div>
+
+      <div class="service-location">
+        <h6 class="Service-Provider-location">Location: City, Country</h6>
+      </div>
+      <div class="service-button" [routerLink]="['/providerDetails/',provider.id]" >
+        <button class="Service-Provider-button">Explore Services</button>
+      </div>
+    </div>
+  </div>
+</div>
+
