--- a/B-app/src/app/components/service-details/service-details.component.html
+++ b/B-app/src/app/components/service-details/service-details.component.html
@@ -42,6 +42,7 @@
       </div>
 
       <div class="service-location">
+        <!-- <h6 class="Service-Provider-location">{{provider.address}}</h6> -->
         <h6 class="Service-Provider-location">Location: City, Country</h6>
       </div>
       <div class="service-button" [routerLink]="['/providerDetails/',provider.id]" >
