--- a/B-app/src/app/components/service-details/service-details.component.html
+++ b/B-app/src/app/components/service-details/service-details.component.html
@@ -32,7 +32,7 @@
   <div *ngFor="let provider of providers">
     <div class="two">
       <div class="div-service-img">
-        <img [src]="provider.imageUrl" />
+        <img class="w-100 " [src]="provider.imageUrl" />
       </div>
       <div class="service-name">
         <h2 class="Service-Provider-Name">{{ provider.name | trim }}
