after adding interceptor , fixing add to cart

--- a/B-app/src/app/components/provider-details/provider-details.component.html
+++ b/B-app/src/app/components/provider-details/provider-details.component.html
@@ -1,13 +1,10 @@
-<!-- <p>provider-details works!</p> -->
-<div class="mt-4 ">
-  <div >
-    <div class="product">
-      {{ providerDetails.id }} 
-      {{ providerDetails.email }}
-      {{ providerDetails.name }}
-      {{providerDetails.description}}
-      {{providerDetails.address}}
-      <img  [src]="providerDetails.imageUrl" />
-    </div>
-  </div>
+<div class="mt-4 bg-light product p-2 ">
+  <h2 class="d-flex justify-content-center align-items-center ">  {{ providerDetails.name }} <img [src]="providerDetails.imageUrl" /></h2>
+
+ <h6 class="text-info d-block d-flex justify-content-center align-items-center">{{ providerDetails.email }}</h6>
+ <h3 >About The Company :</h3>
+    <p class="d-flex justify-content-center align-items-center" >  {{providerDetails.description}}</p>
+    <h3>The Company's Address  :</h3>
+    {{providerDetails.address}}
 </div>
+<button class="btn mt-2 d-flex justify-content-center align-items-center fw-bold ">Book a Service</button>
